--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/icon"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:resizeableActivity="true"
+        android:maxAspectRatio="2.4">
         <activity android:name=".activity.GuideActivity">
 
         </activity>
@@ -28,6 +30,9 @@
             android:label="@string/app_name">
 
         </activity>
+        <meta-data
+            android:name="notch.config"
+            android:value="portrait|landscape"/>
     </application>
 
 </manifest>
