--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.wangliangjun.androidtraining133">
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
@@ -11,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:resizeableActivity="true"
-        android:maxAspectRatio="2.4">
+        android:maxAspectRatio="2.4"
+        tools:targetApi="p">
         <meta-data
             android:name="notch.config"
             android:value="portrait|landscape"/>
