--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     implementation 'com.github.GrenderG:Toasty:1.4.2'
     //noinspection GradleDependency
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+    implementation 'com.youth.banner:banner:1.4.10'
+    implementation 'com.just.agentweb:agentweb:4.0.3-beta' // (必选)
 }
