--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,9 @@
         </activity>
         <activity
             android:name=".activity.NewsDetailActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:hardwareAccelerated="true"
+            android:configChanges="orientation|screenSize">
 
         </activity>
     </application>
